# emanager

./: Cargo.toml  README.md
src/: acpi.rs  args.rs  battery.rs  brightness.rs  hypr.rs  logger.rs  main.rs  manager.rs  notifier.rs  stater.rs  system.rs  systemd.rs  utils.rs  volume.rs  wifi.rs
