[package]
name = "emanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
battery = "0.7.8"
clap = { version = "4.3.17", features = ["derive"] }
hyprland = "0.3.8"
notify-rust = "4.8.0"
rand = "0.8.5"
serde = { version = "1.0.174", features = ["serde_derive"] }
serde_json = "1.0.103"
zbus = "3.14.1"
